# RobokasiV2_Host

./: .gitignore  CMakeLists.txt  README.md
ext/: CMakeLists.txt
include/gui/: DriveControl.hpp  LinearDrive.hpp  PauseProgram.hpp  ProgramAnimator.hpp  ProgramEditor.hpp  ProgramExecutor.hpp  SerialConfig.hpp  Shader.hpp  StepAnimator.hpp  StepTypes.hpp  Trackball.hpp  TrapezoidDrive.hpp  VisualizerConfig.hpp
include/hwio/: CommandQueue.hpp  Hwio.hpp  SerialProto.hpp
include/kinematics/: Chain.hpp  DHMatrix.hpp  InverseKinematics.hpp  Joint.hpp  LinearDrive.hpp  Program.hpp  Puma560.hpp  TrapezoidDrive.hpp
src/app/: SDLApp.cpp  SDLApp.hpp
src/gui/: DriveControl.cpp  LinearDrive.cpp  Lines.cpp  Mesh.cpp  PauseProgram.cpp  ProgramAnimator.cpp  ProgramEditor.cpp  ProgramExecutor.cpp  Puma560Model.cpp  SerialConfig.cpp  StepAnimator.cpp  StepTypes.cpp  Trackball.cpp  TrapezoidDrive.cpp  VisualizerConfig.cpp
src/hwio/: CommandQueue.cpp  Hwio.cpp  SerialProto.cpp
src/kinematics/: Chain.cpp  DHMatrix.cpp  InverseKinematics.cpp  Joint.cpp  LinearDrive.cpp  Program.cpp  Puma560.cpp  TrapezoidDrive.cpp
